--- a/frontend/index2.css
+++ b/frontend/index2.css
@@ -2,6 +2,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100vh;
+    width: 100%;
+}
+
+.chat-container-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     height: 50vh;
     width: 50vh;
     padding: 10px;
